<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_movie"
        android:title="@string/movies"
        android:icon="@drawable/ic_movies"/>

    <item
        android:id="@+id/menu_tv_show"
        android:title="@string/tv_shows"
        android:icon="@drawable/ic_tv_shows"/>

    <item
        android:id="@+id/menu_favorite"
        android:title="@string/favorites"
        android:icon="@drawable/ic_star"/>

</menu>